feat(lattices_macro): add `#[derive(Lattice)]` derive macros, fix #1247 (#1250)
This adds derive macros to allow user-created macros. Each field must be
a lattice.

Example usage:
```rust
struct MyLattice<KeySet, Epoch>
where
    KeySet: Collection,
    Epoch: Ord,
{
    keys: SetUnion<KeySet>,
    epoch: Max<Epoch>,
}
```

Uses `#[derive(Lattice)]` for the `lattices` library `Pair` lattice.
Also contains some cleanup in the `lattices` crate.

--- a/lattices/Cargo.toml
+++ b/lattices/Cargo.toml
@@ -16,3 +16,5 @@ cc-traits = "2.0.0"
 sealed = "0.5"
 serde = { version = "1.0.160", features = ["derive"], optional = true }
 variadics = { path = "../variadics", version = "^0.0.4" }
+trybuild = "1.0.80"
+lattices_macro = { path = "../lattices_macro", version = "^0.5.5" }
