add tuple! macro to convert variadic to tuple

--- a/lattices/Cargo.toml
+++ b/lattices/Cargo.toml
@@ -16,5 +16,6 @@ cc-traits = "2.0.0"
 sealed = "0.5"
 serde = { version = "1.0.160", features = ["derive"], optional = true }
 variadics = { path = "../variadics", version = "^0.0.4" }
+variadics_macro = { path = "../variadics_macro", version = "^0.5.5" }
 trybuild = "1.0.80"
 lattices_macro = { path = "../lattices_macro", version = "^0.5.5" }
