test for generic join working well

--- a/lattices/Cargo.toml
+++ b/lattices/Cargo.toml
@@ -19,3 +19,4 @@ variadics = { path = "../variadics", version = "^0.0.4" }
 variadics_macro = { path = "../variadics_macro", version = "^0.5.5" }
 trybuild = "1.0.80"
 lattices_macro = { path = "../lattices_macro", version = "^0.5.5" }
+fnv = "1.0.7"
