--- a/hydroflow_lang/Cargo.toml
+++ b/hydroflow_lang/Cargo.toml
@@ -12,7 +12,6 @@ workspace = true
 
 [features]
 default = []
-diagnostics = []
 debugging = [ "dep:data-encoding", "dep:webbrowser", "clap-derive" ]
 clap-derive = [ "dep:clap" ]
 
@@ -34,3 +33,4 @@ webbrowser = { version = "1.0.0", optional = true }
 
 [build-dependencies]
 syn = { version = "2.0.46", features = [ "extra-traits", "full", "parsing" ] }
+rustc_version = "0.4.0"
