--- a/hydroflow/Cargo.toml
+++ b/hydroflow/Cargo.toml
@@ -11,9 +11,8 @@ description = "Hydro's low-level dataflow runtime and IR"
 workspace = true
 
 [features]
-default = [ "macros", "nightly", "debugging" ]
+default = [ "macros", "debugging" ]
 
-nightly = [ "hydroflow_macro", "hydroflow_macro/diagnostics" ]
 macros = [ "hydroflow_macro", "hydroflow_datalog" ]
 hydroflow_macro = [ "dep:hydroflow_macro" ]
 hydroflow_datalog = [ "dep:hydroflow_datalog" ]
@@ -23,7 +22,6 @@ debugging = [ "hydroflow_lang/debugging" ]
 
 [[example]]
 name = "kvs_bench"
-required-features = [ "nightly" ]
 
 [[example]]
 name = "python_udf"
@@ -93,3 +91,6 @@ zipf = "7"
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 # Rayon (rust data-parallelism library) does not compile on WASM.
 criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
+
+[build-dependencies]
+rustc_version = "0.4.0"
