--- a/hydroflow_macro/Cargo.toml
+++ b/hydroflow_macro/Cargo.toml
@@ -13,9 +13,6 @@ workspace = true
 [lib]
 proc-macro = true
 
-[features]
-diagnostics = [ "hydroflow_lang/diagnostics" ]
-
 [dependencies]
 # Note: If we ever compile this proc macro crate to WASM (e.g., if we are
 # building on a WASM host), we may need to turn diagnostics off for WASM if
@@ -30,3 +27,4 @@ syn = { version = "2.0.46", features = [ "parsing", "extra-traits" ] }
 hydroflow_lang = { path = "../hydroflow_lang", version = "^0.10.0" }
 itertools = "0.10.0"
 quote = "1.0.35"
+rustc_version = "0.4.0"
