--- a/hydroflow_plus/Cargo.toml
+++ b/hydroflow_plus/Cargo.toml
@@ -15,10 +15,15 @@ path = "src/lib.rs"
 
 [features]
 default = ["deploy_runtime"]
-diagnostics = [ "hydroflow_lang/diagnostics" ]
 stageleft_devel = []
-deploy_runtime = [ "hydroflow/deploy_integration" ]
-deploy = [ "deploy_runtime", "dep:hydro_deploy", "dep:trybuild-internals-api", "dep:toml", "dep:prettyplease" ]
+deploy_runtime = ["hydroflow/deploy_integration"]
+deploy = [
+    "deploy_runtime",
+    "dep:hydro_deploy",
+    "dep:trybuild-internals-api",
+    "dep:toml",
+    "dep:prettyplease",
+]
 
 [dependencies]
 bincode = "1.3.1"
@@ -27,17 +32,21 @@ hydroflow = { path = "../hydroflow", version = "^0.10.0", default-features = fal
 hydroflow_lang = { path = "../hydroflow_lang", version = "^0.10.0" }
 match_box = "0.0.2"
 nameof = "1.0.0"
-prettyplease = { version = "0.2.0", features = [ "verbatim" ], optional = true }
+prettyplease = { version = "0.2.0", features = ["verbatim"], optional = true }
 proc-macro-crate = "1.0.0"
 proc-macro2 = "1.0.74"
 quote = "1.0.35"
 sealed = "0.6.0"
-serde = { version = "1.0.197", features = [ "derive" ] }
+serde = { version = "1.0.197", features = ["derive"] }
 sha2 = "0.10.0"
 stageleft = { path = "../stageleft", version = "^0.5.0" }
 stageleft_tool = { path = "../stageleft_tool", version = "^0.4.0" }
-syn = { version = "2.0.46", features = [ "parsing", "extra-traits", "visit-mut" ] }
-tokio = { version = "1.29.0", features = [ "full" ] }
+syn = { version = "2.0.46", features = [
+    "parsing",
+    "extra-traits",
+    "visit-mut",
+] }
+tokio = { version = "1.29.0", features = ["full"] }
 toml = { version = "0.8.0", optional = true }
 trybuild-internals-api = { version = "1.0.99", optional = true }
 
