--- a/hydro_deploy/core/Cargo.toml
+++ b/hydro_deploy/core/Cargo.toml
@@ -31,7 +31,7 @@ memo-map = "0.3.0"
 nameof = "1.0.0"
 nanoid = "0.4.0"
 nix = { version = "0.29.0", features = [ "signal" ] }
-russh = "0.51.1"
+russh = { git = "https://github.com/hydro-project/russh.git", rev="361f38132a8e0f9abf140066c5a0826c99ca700f" }
 russh-sftp = "2.0.8"
 serde = { version = "1.0.197", features = [ "derive" ] }
 serde_json = "1.0.115"
