--- a/hydro_deploy/core/Cargo.toml
+++ b/hydro_deploy/core/Cargo.toml
@@ -15,7 +15,6 @@ workspace = true
 anyhow = { version = "1.0.82", features = [ "backtrace" ] }
 async-process = "2.0.0"
 async-recursion = "1.0.0"
-async-ssh2-lite = { version = "0.5.0", features = [ "tokio" ] }
 async-trait = "0.1.54"
 buildstructor = "0.6.0"
 bytes = "1.1.0"
@@ -38,5 +37,5 @@ serde_json = "1.0.115"
 shell-escape = "0.1.0"
 tempfile = "3.0.0"
 tokio = { version = "1.29.0", features = [ "full" ] }
-tokio-stream = { version = "0.1.3", default-features = false }
+tokio-stream = { version = "0.1.3", default-features = false, features = [ "io-util" ] }
 tokio-util = { version = "0.7.5", features = [ "compat", "io-util" ] }
