--- a/pusherator/Cargo.toml
+++ b/pusherator/Cargo.toml
@@ -12,12 +12,20 @@ license = { workspace = true }
 workspace = true
 
 [features]
-default = [ "demux" ]
-demux = [ "dep:variadics" ]
+default = [ "demux", "pusherator", "sink", "sinkerator" ]
+demux = [ "variadics" ]
+pusherator = []
+sink = [ "futures", "dep:pin-project-lite" ]
+sinkerator = [ "futures", "dep:pin-project-lite" ]
+# Dependency-specific features below.
+futures = [ "dep:futures" ]
+variadics = [ "dep:variadics" ]
 
 [package.metadata.docs.rs]
 all-features = true
 
 [dependencies]
 either = "1.0.0"
+futures = { optional = true, version = "0.3" }
+pin-project-lite = { optional = true, version = "0.2" }
 variadics = { optional = true, path = "../variadics", version = "^0.0.9" }
