--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ strip = true      # Strip symbols from the binary
 # performance.
 opt-level = 3
 lto = "fat"
+codegen-units = 1
 
 [profile.profile]
 inherits = "release"
