--- a/pusherator/Cargo.toml
+++ b/pusherator/Cargo.toml
@@ -15,7 +15,7 @@ workspace = true
 default = [ "demux", "pusherator", "sink", "sinkerator" ]
 demux = [ "variadics" ]
 pusherator = []
-sink = [ "futures", "dep:pin-project-lite" ]
+sink = [ "futures", "dep:pin-project-lite", "dep:sealed" ]
 sinkerator = [ "futures", "dep:pin-project-lite" ]
 # Dependency-specific features below.
 futures = [ "dep:futures" ]
@@ -28,4 +28,10 @@ all-features = true
 either = "1.0.0"
 futures = { optional = true, version = "0.3" }
 pin-project-lite = { optional = true, version = "0.2" }
+sealed = { optional = true, version = "0.6" }
 variadics = { optional = true, path = "../variadics", version = "^0.0.9" }
+
+[dev-dependencies]
+tokio = { version = "1.29.0", features = [ ] }
+tokio-stream = { version = "0.1.3", default-features = false, features = [ ] }
+tokio-util = { version = "0.7.5", features = [ ] }
