--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "lattices",
     "multiplatform_test",
     "pusherator",
+    "sinktools",
     "variadics_macro",
     "variadics",
     "website_playground",
