--- a/variadics/Cargo.toml
+++ b/variadics/Cargo.toml
@@ -11,6 +11,13 @@ license = { workspace = true }
 [lints]
 workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+
+[features]
+default = ["std"]
+std = []
+
 [dependencies]
 sealed = "0.6.0"
 hashbrown = "0.14.0"
